# ALICE-Text

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README_ja.md  pyproject.toml
.cargo/: config.toml
.github/: dependabot.yml
benches/: compression_benchmark.rs
bindings/ue5/: AliceText.h
bindings/unity/: AliceText.cs
examples/: compression_test.rs
src/: arithmetic_coder.rs  columnar_encoder.rs  dialogue.rs  entropy_estimator.rs  exception_decoder.rs  exception_encoder.rs  ffi.rs  font_bridge.rs  format_v3.rs  lib.rs  ml_bridge.rs  pattern_learner.rs  query_engine.rs  search_bridge.rs  tuned_compressor.rs  tuned_pattern_learner.rs  unicode_norm.rs  voice_bridge.rs
